Add note functionality implemented

--- a/app/src/main/res/layout/note_item.xml
+++ b/app/src/main/res/layout/note_item.xml
@@ -35,10 +35,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/note_title"
-            android:ellipsize="marquee"
+            android:ellipsize="end"
             android:maxLines="2"
-            android:singleLine="false"
-            android:text="DescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescription" />
+            android:text="DescriptionDescriptionDescriptionDescriptionDescriptionDescaefawfeawfewafewaefawefasefsaefriptionDescriptionDescriptionDescriptionDescriptionDescription" />
 
     </RelativeLayout>
 
